GNOME Bugzilla – Bug 796822
glupload: Only offer DMABuf caps feature if using EGL
Last modified: 2018-08-22 10:29:52 UTC
This is patch is not yet correct, caused assertion as apparently the transform function can be called with NULL context. I was also wondering if these calls are save from outside the GL Thread. Attaching for help.
Created attachment 373077 [details] [review] glupload: Only offer DMABuf caps feature if using EGL This was miss-leading VAAPI which was not forcing linear back buffers, would still export DMABuf. That caused bad rendering as the buffers are tiled and most likely compressed.
Created attachment 373078 [details] [review] glupload: Only offer DMABuf caps feature if using EGL This was miss-leading VAAPI which was not forcing linear back buffers, would still export DMABuf. That caused bad rendering as the buffers are tiled and most likely compressed.
Review of attachment 373078 [details] [review]: Looks good
Attachment 373078 [details] pushed as 63cf6b4 - glupload: Only offer DMABuf caps feature if using EGL
*** Bug 797005 has been marked as a duplicate of this bug. ***